still some work to do

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	
-	<title></title>
+	<title>HW-Wireframe</title>
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -40,8 +40,18 @@
 
 </html>
 
-<!-- two possible ways to look at this... keep all sections independent of eachother and wrap in a div(s) and add padding/margins to make work. OR.. put the article inside of the section. OR..     
+<!-- 
 
-ISSUE: overlap of margin on footer
-ISSUE: no separation of section and aside 
-ISSUE: overall centering of sections on page... should all be centered? -->
+Two possible ways to look at this... keep all sections independent of eachother and wrap in a div(s) and add padding/margins to make work. OR.. put the article inside of the section. Or...
+
+Issues to correct:
+.....................
+
+ISSUE: overlap of margin on footer [fixed with margin-bottom on nav]
+ISSUE: no separation of section and aside [fixed with margin-left on aside]
+ISSUE: overall centering of sections on page... should all be centered? [fixed with "margin: 0 auto;""]
+ISSUE: aside should be flush right... and fill size without making a bigger gap on left. does it need an absolute size or a percentage? or a remainder of some sort? Fixed, but still don't understand the control issue. Will investigate.
+
+
+
+-->
